--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
       <p class="fonte">Por g1</p>
       <p class="time">18/09/2023 00h00 Atualizado há 16 horas</p>
       <div class="social-media">
-        <a href="#" class="face"><ion-icon name="logo-facebook"></ion-icon></a>
-        <a href="#" class="whatsapp"><ion-icon name="logo-whatsapp"></ion-icon></a>
-        <a href="#" class="share"><ion-icon name="share-social-outline"></ion-icon></a>
+        <a href="#" class="face" aria-label="facebook link"><ion-icon name="logo-facebook"></ion-icon></a>
+        <a href="#" class="whatsapp" aria-label="whatsapp link"><ion-icon name="logo-whatsapp"></ion-icon></a>
+        <a href="#" class="share" aria-label="share link"><ion-icon name="share-social-outline"></ion-icon></a>
       </div>
       <div class="content">
         <figure>
