--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
           <img src="assets/ios-17-namedrop.webp" alt="iPhones">
           <figcaption>Namedrop, disponível no iOS 17, permite compartilhar número de telefone ou e-mail ao aproximar
             iPhones — Foto:
-            Divulgação/Apple</figcaption>
+            Divulgação/Apple
+          </figcaption>
         </figure>
         <p>
           <img id="ad" src="assets/anuncio.jpg" alt="propaganda">
